# WGPUEuler

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/engine/: mod.rs
src/engine/camera/: camera.rs  camera_uniform.rs  controller.rs  mod.rs  perspective.rs  projection.rs
src/engine/core/: app.rs  engine.rs  input_handler.rs  input_types.rs  mod.rs  window.rs
src/engine/renderer/: mod.rs
src/engine/renderer/webgpu/: graphics_context.rs  mod.rs  render_pass.rs  renderer.rs
src/engine/renderer/webgpu/shaders/: grid_shader.wgsl
src/engine/renderer/webgpu/types/: mod.rs
src/engine/simulations/: euler_simulation.rs  mod.rs  sph_simulation.rs
src/engine/utils/: mod.rs
src/engine/utils/entities/: cube.rs  mod.rs  sphere.rs
src/engine/utils/types/: constants.rs  deg.rs  instance.rs  mod.rs  point.rs  rad.rs  vertex.rs
src/simulator/: mod.rs  simulation.rs
src/simulator/simutils/: camera_controller_2d.rs  camera_controller_3d.rs  mod.rs
