[package]
name = "abstrct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = "0.17"
tokio = { version = "1.31", features = [ "full" ] }
glam = "0.24"
tracing = "0.1"
tracing-subscriber = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }